--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -159,6 +159,7 @@ td {
     border-radius: 5px;
     margin-top: 16px !important;
     padding: 32px 16px 10px;
+    margin-bottom: 20px !important;
 }
 
   
