Blog Client (Ui & Api)

--- a/src/Components/Navber/Navber.scss
+++ b/src/Components/Navber/Navber.scss
@@ -8,8 +8,8 @@
     height: 60px !important;
 
     .active {
-        background-color: #F1F1F1 !important;
-        border-radius: 7px !important;
+        // background-color: #F1F1F1 !important;
+        // border-radius: 7px !important;
     }
 
     a {
