--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -37,7 +37,7 @@ body {
   font-weight: 600 !important;
   display: inline-flex;
   align-items: center;
-  font-size: 0.95rem !important;
+  font-size: 13px !important;
   width: fit-content;
   padding: 0.1rem .4rem;
   border-radius: 0.425rem;
