--- a/src/Components/Navber/Navber.scss
+++ b/src/Components/Navber/Navber.scss
@@ -82,7 +82,7 @@
 
 
     --primary-color: #edf2f8;
-    --secondary-color: #313bac;
+    --secondary-color: #FAAA40;
     --black-color: #030303;
     --lightGray-color: #e4e4e4;
     --gray-color: #6b7688;
