--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -25,7 +25,7 @@ a {
 
 // button in folder (component / button ) shared in all project 
 .baseBtn {
-    padding: 20px;
+    padding: 15px;
 
     button {
         font-family: $fontBase !important;
@@ -38,6 +38,22 @@ a {
         padding: 12px 45px !important;
         border: none;
     }
+}
+
+.baseBtn1{
+  padding: 15px;
+
+  button {
+    font-family: $fontBase !important;
+    font-style: normal;
+    font-weight: 400 !important;
+    font-size: 18px !important;
+    line-height: 27px;
+    color: #FFFFFF;
+    gap: 12px;
+    padding: 12px 35px !important;
+    border: none;
+}
 }
 
 // h1 h2 base style ( component / header ) shared in all project when wonted
