--- a/src/Pages/Chat/chat.scss
+++ b/src/Pages/Chat/chat.scss
@@ -283,7 +283,7 @@
     padding-left: 10px;
     padding-top: 5px;
     border-radius: 31.5px 31.5px 31.5px 0px;
-    width: 77% !important;
+    width: 40% !important;
 }
 
 .message-content {
@@ -311,11 +311,14 @@
 }
 
 #other .message-content {
-    justify-content: flex-end;
+    justify-content: flex-start;
     background: #FFFFFF;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 31.5px 31.5px 0px 31.5px;
     color: #000000;
+    width: 50% !important;
+    margin-left: auto;
+
 }
 
 #other .message-meta {
@@ -404,7 +407,7 @@
 }
 
 .message-content img {
-    width: 60% !important;
+    width: 100% !important;
 }
 
 .app__chat__Consult {
