--- a/src/Pages/Chat/chat.scss
+++ b/src/Pages/Chat/chat.scss
@@ -129,7 +129,7 @@
                     align-items: center !important;
                     justify-content: space-between !important;
                     width: 100%;
-                    z-index: 9999;
+                    // z-index: 9999;
                     left: 0;
                     right: 0;
                     border-radius: 12px 12px 0 0 !important;
