--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -33,14 +33,16 @@ main {
         .logo {
             font-size: 18px;
             line-height: 0;
-            padding: 30px 30px 0px 30px;
-            width: 170px;
+            /* padding: 30px 30px 0px 31px; */
+            width: 129px !important;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
             color: $colorRed-0;
+            -webkit-user-select: none;
             user-select: none;
+            margin: auto;
         }
 
         .bars {
