--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -114,3 +114,10 @@ td{
   background-color: #0d6efd !important;
   border-color: #0d6efd !important;
 }
+
+
+.daterangepicker td.active, .daterangepicker td.active:hover {
+  background-color: #FAAA40 !important;
+  border-color: transparent;
+  color: #fff;
+}
