--- a/src/Components/Navber/Navber.scss
+++ b/src/Components/Navber/Navber.scss
@@ -107,8 +107,16 @@
         height: 70%;
         color: var(--white-color);
     }
-
+    .sidebarSm{
+        transform: none;
+       overflow: scroll;
+       display: flex;
+       flex-direction: row-reverse;
+       align-items: baseline;
+   }
     div {
+        overflow: scroll;
+
         position: fixed;
         top: 0;
         bottom: 0;
@@ -135,8 +143,8 @@
         box-shadow: 0 0 40px rgba(168, 168, 168, 0.15);
 
         svg {
-            width: 35px;
-            height: 35px;
+            width: 20px;
+            height: 20px;
             color: var(--secondary-color);
             margin: 0.5rem 1rem;
         }
@@ -155,7 +163,7 @@
             flex-direction: column;
 
             li {
-                margin: 1rem;
+                margin: 10px 0;
 
                 a {
                     color: var(--gray-color);
