--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -75,13 +75,11 @@ a {
   }
 
   h2 {
-    /* En (25 M) */
-
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 25px;
-    line-height: 38px;
+    font-family: "Poppins" !important;
+    font-style: normal !important;
+    font-weight: 500 !important;
+    font-size: 20px !important; 
+    color: #171717 !important;
   }
 }
 
