--- a/src/Pages/auth/Login/login.scss
+++ b/src/Pages/auth/Login/login.scss
@@ -130,3 +130,7 @@
     font-size: larger;
     user-select: none;
 }
+.anther_way_toLgoin {
+    background-color: transparent;
+    border: none !important;
+}
