--- a/src/style/_varibale.scss
+++ b/src/style/_varibale.scss
@@ -16,8 +16,7 @@ $colorBlue-0: #3182CE;
 $fontSize: 39px;
 $fontBase: 'Poppins', sans-serif;
 // shadow
-$shadow: 0px 6px 7px rgba(188, 188, 188, 0.16);
-;
+$shadow: 0px 6px 7px rgba(188, 188, 188, 0.16);;
 $shadow-navbar: 0px 4px 4px rgba(183, 183, 183, 0.47);
 // border radius
 $radius-sm: 5px;
