--- a/src/Components/Navber/Navber.scss
+++ b/src/Components/Navber/Navber.scss
@@ -100,7 +100,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    background-color: var(--secondary-color);
+    background-color: $colorRed-0;
 
     svg {
         width: 70%;
@@ -145,7 +145,7 @@
         svg {
             width: 20px;
             height: 20px;
-            color: var(--secondary-color);
+            color: $colorRed-0;
             margin: 0.5rem 1rem;
         }
 
@@ -179,7 +179,7 @@
                     font-size: larger;
 
                     &:hover {
-                        color: var(--secondary-color);
+                        color: $colorRed-0;
                     }
                 }
             }
