--- a/src/Pages/Blogs/blog.scss
+++ b/src/Pages/Blogs/blog.scss
@@ -1,4 +1,4 @@
-@import url(" ../../style/_varibale.scss");
+@import  " ../../../../style/_varibale.scss" ;
 
 .app__blog {
   .app__addprodects__header {
@@ -6,7 +6,7 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    margin-top: 24px !important;
+    margin-top: 24px !important; 
   }
 
   .blog__popup {
@@ -19,7 +19,7 @@
     text-align: right;
     text-decoration-line: underline;
 
-    color: #faaa40 !important;
+    // color: $mainColor  !important;
     cursor: pointer;
     text-decoration: underline !important;
   }
@@ -73,7 +73,7 @@
         font-size: 19px !important;
         line-height: 24px !important;
 
-        color: #faaa40 !important;
+        // color: $mainColor !important;
       }
     }
 
@@ -183,7 +183,7 @@
                   font-size: 16px;
                   padding-top: 10px;
                   line-height: 24px;
-                  color: #faaa40;
+                  color: $mainColor;
                 }
               }
 
