--- a/src/style/_varibale.scss
+++ b/src/style/_varibale.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Mono:wght@200;300;400;500;600;700&family=Roboto:wght@700;900&family=Tajawal:wght@300;400;500;700;800;900&display=swap');
 // colors
-$colorRed-0: #8054A1;
+$mainColor: #8054A1;
+$secondColor:#66b9b1;
 $colorGrey-0: #4A4A4A;
 $colorGrey-1: #999999;
 $colorDark: #000000;
@@ -11,7 +12,6 @@ $colorLight-1: #F7F9FB;
 $colorGreen: #40AB45;
 $colorRed-1: #E20000;
 $colorBlue-0: #3182CE;
-
 // font size
 $fontSize: 39px;
 $fontBase: 'Poppins', sans-serif;
